src/components/styles/Sidebar.module.scss
@use "sass:map";

@import "prelude.scss";

.logo {
  --width: 60px;
  --height: 47px;
    
  --fill: #{$white};

  margin-top: 10px;
}

@media (min-width: map.get($grid-breakpoints, "md")) {
  .logo {
    --width: 92px;
    --height: 70px;
  }
}

.sidebar {
  width: 100dvw;
  height: $sidebar-height;
}

@media (min-width: map.get($grid-breakpoints, "md")) {
  .sidebar {
    width: $sidebar-width;
    height: 100dvh;
  }
}

.bold-icon {
  -webkit-text-stroke: 1px $white;
}

